# probabilistic-optimizing-llm-throughput

./: .gitignore  README.md  environment.yml  pyproject.toml
lsdist/: __init__.py
lsdist/dataset/: dist_lmdb.py  ssch_sample.py  trainable_lmdb.py
lsdist/dispatch/: llama.py  strategy_sim.py
lsdist/llama/: README.md  generation.py  model.py  tokenizer.py
lsdist/model/: backbone.py  net.py  transforms.py
lsdist/sample/: llama.py
lsdist/ssch/: length_predictor.py  llama2_utils.py
lsdist/utils/: __init__.py  data.py  distributed.py  io.py  log.py  numerical.py  parallel.py  slices.py
lsdist/vis/: __init__.py
scripts/dispatch/: export_dist.py  throughput_benchmark.py
scripts/sample/: dist_to_trainable.py  generation_config.yml  llama_chat.py
scripts/ssch/: export_openai_format.py  find_best_ckpt.py  get_ssch_predict.py  llama2_lora_sft_max_bin100.yaml  llama2_lora_sft_mean_bin100.yaml  model_config.yml  pt_config.json  pt_test.py  pt_train.py  ssch_prompt_template_max.jinja
scripts/train/: find_best_ckpt.py  pt_test.py  pt_test_scalar.py  pt_train.py  pt_train_scalar.py
